opk for GCW Zero

--- a/reicast/gcwz/Makefile
+++ b/reicast/gcwz/Makefile
@@ -71,12 +71,17 @@ OBJECTS:=$(OBJECTS:.S=.build_obj)
 OBJECTS:=$(patsubst $(RZDCY_SRC_DIR)/%,obj/%,$(OBJECTS))
 
 
+PACKAGE=reicast-gcwz.opk
 EXECUTABLE_STRIPPED=nosym-reicast.elf
 EXECUTABLE_TARBZ=reicast.tar.bz2
 EXECUTABLE=reicast.elf
 
-all: $(CPPFILES) $(EXECUTABLE) $(EXECUTABLE_STRIPPED) $(EXECUTABLE_TARBZ)
+PACKAGE_FILES=$(EXECUTABLE_STRIPPED) default.gcw0.desktop icon-32.png
+
+all: $(CPPFILES) $(EXECUTABLE) $(EXECUTABLE_STRIPPED) $(EXECUTABLE_TARBZ) $(PACKAGE)
 	
+$(PACKAGE): $(PACKAGE_FILES)
+	mksquashfs $(PACKAGE_FILES) $(PACKAGE) -all-root
 
 $(EXECUTABLE): $(OBJECTS)
 	echo $(RZDCY_FILES)
