--- a/reicast/android/AndroidManifest.xml
+++ b/reicast/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.reicast.emulator"
-    android:versionCode="3"
-    android:versionName="0.r4" >
+    android:versionCode="6"
+    android:versionName="0.r5+" >
 
     <uses-sdk
         android:minSdkVersion="8"
