PANDORA: Makefile adapted to new naming scheme

--- a/shell/pandora/Makefile
+++ b/shell/pandora/Makefile
@@ -6,9 +6,9 @@ FOR_PANDORA :=1
 USE_SDL :=1
 USE_OSS :=1
 
-RZDCY_SRC_DIR = ../../newdc
+RZDCY_SRC_DIR = ../../core
 
-include $(RZDCY_SRC_DIR)/newdc.mk
+include $(RZDCY_SRC_DIR)/core.mk
 
 CC_PREFIX ?=
 
