--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -18,7 +18,8 @@
         
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:configChanges="orientation|screenSize|screenLayout|uiMode" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
