Fixed an outstanding bug in GL2JNIView that Left/Right Triggers would not get reset after pointer up action (reset would only occur if all fingers were lifted) Added Reset icon for touch controls reset Moved strings to string resource General cleanup...

--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -44,8 +44,7 @@
 		     </intent-filter>
         </activity>
 
-        <activity android:name=".EditVJoyActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        </activity>
+        <activity android:name=".EditVJoyActivity" android:screenOrientation="landscape" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         
     </application>
 
