--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -9,9 +9,12 @@
 	
 	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+	
+	<uses-feature android:glEsVersion="0x00020000" android:required="false" />
+	<uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
   
     <application
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
