--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
-	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	<uses-feature android:glEsVersion="0x00020000" android:required="false" />
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
   
     <application
