--- a/shell/pandora/Makefile
+++ b/shell/pandora/Makefile
@@ -10,9 +10,9 @@ USE_OSS :=1
 #PGO_MAKE :=1
 #PGO_USE :=1
 
-RZDCY_SRC_DIR = ../../newdc
+RZDCY_SRC_DIR = ../../core
 
-include $(RZDCY_SRC_DIR)/newdc.mk
+include $(RZDCY_SRC_DIR)/core.mk
 
 CC_PREFIX ?=
 
