Fixed Pandora Makefile

--- a/shell/pandora/Makefile
+++ b/shell/pandora/Makefile
@@ -13,7 +13,7 @@ PGO_USE :=1
 #PGO_MAKE :=1
 PGO_USE :=1
 
-RZDCY_SRC_DIR = ../../newdc
+RZDCY_SRC_DIR = ../../core
 
 include $(RZDCY_SRC_DIR)/core.mk
 
