Add the standard work-arounds for Android not cleaning up

--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -15,6 +15,7 @@
   
     <application
         android:hardwareAccelerated="true"
+        android:largeHeap="true" 
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
