--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -25,7 +25,7 @@
         
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:configChanges="orientation|screenSize|screenLayout|uiMode" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
