--- a/shell/debug/AndroidManifest.xml
+++ b/shell/debug/AndroidManifest.xml
@@ -9,18 +9,38 @@
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission
+        android:name="com.reicast.emulator.debug.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.reicast.emulator.debug.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity android:name=".Debugger" >
+        android:label="@string/app_name">
+        <activity android:name=".Debug"
+            android:excludeFromRecents="true"
+            android:theme="@style/Theme.PanelTheme" >
             <intent-filter>
-                <action android:name="com.reicast.emulator.DEBUG" />
+                <action android:name="reicast.emulator.DEBUG" />
+                <action android:name="reicast.emulator.NOTIFY" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+                <category android:name="com.reicast.emulator.debug" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
