--- a/shell/debug/AndroidManifest.xml
+++ b/shell/debug/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -27,6 +30,15 @@
             <intent-filter>
                 <action android:name="reicast.emulator.DEBUG" />
                 <action android:name="reicast.emulator.NOTIFY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".GitHash"
+            android:excludeFromRecents="true"
+            android:theme="@style/Theme.PanelTheme" >
+            <intent-filter>
+                <action android:name="reicast.emulator.GITHUB" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
