Added iOS artifacts to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,24 @@ newdc/android/libnewdc/bin/libnewdc.jar
 newdc/android/libnewdc/bin/classes/com/example/newdc/JNIdc.class
 
 shell/android/assets/build
+
+# iOS/Xcode general stuff
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+emulator.xccheckout
+reicast.xccheckout
+build/*
