--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ newdc/android/libnewdc/bin/libnewdc.jar
 newdc/android/libnewdc/bin/classes/com/example/newdc/JNIdc.class
 
 shell/android/assets/build
+shell/android/tools
 
 # iOS/Xcode general stuff
 .DS_Store
