--- a/shell/reicast.vcxproj
+++ b/shell/reicast.vcxproj
@@ -35,6 +35,24 @@
     <ClCompile Include="..\core\deps\libpng\pngwrite.c" />
     <ClCompile Include="..\core\deps\libpng\pngwtran.c" />
     <ClCompile Include="..\core\deps\libpng\pngwutil.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\base64-decode.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\client-handshake.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\client-parser.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\client.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\context.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\extension-deflate-frame.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\extension-deflate-stream.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\extension.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\libwebsockets.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\lws-plat-unix.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\lws-plat-win.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\output.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\parsers.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\pollfd.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\server-handshake.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\server.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\service.c" />
+    <ClCompile Include="..\core\deps\libwebsocket\sha-1.c" />
     <ClCompile Include="..\core\deps\zlib\adler32.c" />
     <ClCompile Include="..\core\deps\zlib\compress.c" />
     <ClCompile Include="..\core\deps\zlib\crc32.c" />
@@ -150,6 +168,11 @@
     <ClInclude Include="..\core\deps\libpng\png.h" />
     <ClInclude Include="..\core\deps\libpng\pngconf.h" />
     <ClInclude Include="..\core\deps\libpng\pngpriv.h" />
+    <ClInclude Include="..\core\deps\libwebsocket\extension-deflate-frame.h" />
+    <ClInclude Include="..\core\deps\libwebsocket\extension-deflate-stream.h" />
+    <ClInclude Include="..\core\deps\libwebsocket\libwebsockets.h" />
+    <ClInclude Include="..\core\deps\libwebsocket\lws_config.h" />
+    <ClInclude Include="..\core\deps\libwebsocket\private-libwebsockets.h" />
     <ClInclude Include="..\core\deps\zlib\crc32.h" />
     <ClInclude Include="..\core\deps\zlib\deflate.h" />
     <ClInclude Include="..\core\deps\zlib\inffast.h" />
