--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -390,6 +390,12 @@
     <ClCompile Include="..\core\deps\libwebsocket\sha-1.c">
       <Filter>deps\libwebsocket</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\deps\libwebsocket\handshake.c">
+      <Filter>deps\libwebsocket</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\webui\server.cpp">
+      <Filter>webui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="hw">
@@ -502,6 +508,9 @@
     </Filter>
     <Filter Include="deps\libwebsocket">
       <UniqueIdentifier>{3d3de3ff-9e79-4920-a95a-61d190e73004}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="webui">
+      <UniqueIdentifier>{81193efc-656a-4154-9adf-146856d4c7d3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -846,6 +855,9 @@
     </ClInclude>
     <ClInclude Include="..\core\deps\libwebsocket\private-libwebsockets.h">
       <Filter>deps\libwebsocket</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\webui\server.h">
+      <Filter>webui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
