Compiles and links for linux x86. No worky yet.
Woohoo, a new gcc bug!
The x86 linux dynarec just got a couple of months further away thanks to gcc being totally retarded as some things (namely, fastcalls). And yes, reicast depends on fastcalls for a lot of things, and no, i don't care if you don't like fastcalls.

--- a/shell/lin86/Makefile
+++ b/shell/lin86/Makefile
@@ -20,7 +20,7 @@ LD=${CC}
 
 MFLAGS := -m32
 #-marm -march=armv7-a -mtune=cortex-a9 -mfpu=neon -mfloat-abi=softfp -funroll-loops
-ASFLAGS := -m32
+ASFLAGS := -32
 #-march=armv7-a -mfpu=neon -mfloat-abi=softfp
 
 LDFLAGS	:= -m32	-g -Wl,-Map,$(notdir $@).map,--gc-sections -Wl,-O3 -Wl,--sort-common 
@@ -81,7 +81,6 @@ PACKAGE_FILES=$(EXECUTABLE_STRIPPED) default.gcw0.desktop icon-32.png
 all: $(CPPFILES) $(EXECUTABLE) $(EXECUTABLE_STRIPPED)
 	
 $(EXECUTABLE): $(OBJECTS)
-	echo $(RZDCY_FILES)
 	$(CXX) $(MFLAGS) $(EXTRAFLAGS) $(LDFLAGS)  $(OBJECTS) $(LIBS) -o $@
 
 $(EXECUTABLE_STRIPPED): $(EXECUTABLE)
