--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.reicast.emulator"
     android:sharedUserId="android.uid.reicast"
-    android:versionCode="6"
-    android:versionName="0.r6" >
+    android:versionCode="7"
+    android:versionName="r7" >
 
     <uses-sdk
         android:minSdkVersion="8"
