Stop relying on a bug to maintain popup view width
The original view was held in place due to an Android bug that began
around ICS, which did not stretch views beyond a set amount when
displayed in modal dialogs.

Clean up the layout to better fit the popup items

--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -2,6 +2,13 @@
     package="com.reicast.emulator"
     android:versionCode="7"
     android:versionName="r7" >
+    
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
     <uses-sdk
         android:minSdkVersion="8"
