--- a/shell/android/AndroidManifest.xml
+++ b/shell/android/AndroidManifest.xml
@@ -39,9 +39,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true"
-        android:isGame="true" >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="xperiaplayoptimized_content"
             android:resource="@drawable/ic_xperia_play" />
