--- a/shell/reicast.vcxproj.filters
+++ b/shell/reicast.vcxproj.filters
@@ -408,6 +408,9 @@
     <ClCompile Include="..\core\reios\descrambl.cpp">
       <Filter>reios</Filter>
     </ClCompile>
+    <ClCompile Include="..\core\reios\reios_elf.cpp">
+      <Filter>reios</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="hw">
@@ -887,6 +890,9 @@
       <Filter>reios</Filter>
     </ClInclude>
     <ClInclude Include="..\core\reios\descrambl.h">
+      <Filter>reios</Filter>
+    </ClInclude>
+    <ClInclude Include="..\core\reios\reios_elf.h">
       <Filter>reios</Filter>
     </ClInclude>
   </ItemGroup>
