--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 notifications:
   irc: chat.freenode.net#reicast
-language: cpp
-compiler: gcc
+language: android
+android:
+  components:
+    - platform-tools
+    - tools
+    - build-tools-22.0.0
+    - android-21
 before_install:
 - openssl aes-256-cbc -K $encrypted_c726d225a9d9_key -iv $encrypted_c726d225a9d9_iv
   -in debug.keystore.enc -out debug.keystore -d
@@ -32,7 +37,7 @@ install:
 before_script: 
 script:
 - cd shell/android
-- android update project -p . --target "android-19"
+- android update project -p . --target "android-21"
 - export NUMBER_OF_PROCESSORS=2
 - ant debug
 before_deploy:
