--- a/shell/lin86/Makefile
+++ b/shell/lin86/Makefile
@@ -6,6 +6,8 @@ X86_REC := 1
 #NO_REC := 1
 #NO_REND := 1
 WEBUI :=1 
+USE_ALSA := 1
+USE_OSS := 1
 #USE_PULSEAUDIO := 1
 
 RZDCY_SRC_DIR = ../../core
@@ -72,7 +74,16 @@ LIBS    += -lm -lrt
 LIBS	+= -ldl -lGL #for desktop gl
 #use this for GLES 
 #LIBS	+= -lEGL -lGLESv2 #-lglslcompiler -lIMGegl -lpvr2d -lsrv_um
-LIBS    += -lpthread -lasound -lX11
+LIBS    += -lpthread -lX11
+
+ifdef USE_ALSA
+	CXXFLAGS += -D USE_ALSA
+	LIBS += -lasound
+endif
+
+ifdef USE_OSS
+	CXXFLAGS += -D USE_OSS
+endif
 
 ifdef USE_PULSEAUDIO
 	CXXFLAGS += -D USE_PULSEAUDIO
